fixed broken links to contact form

--- a/about.html
+++ b/about.html
@@ -21,7 +21,7 @@
                 <img src="./assets/images/logo.svg" alt="brand logo" class="brand_icon">
                 <div>
                     <span>ByteSized</span><br>
-                <span class='brand_solutions'>Solutions</span>
+                    <span class='brand_solutions'>Solutions</span>
                 </div>
             </a>
 
@@ -131,8 +131,8 @@
                             class="fa fa-arrow-right"></i></a>
                 </div>
                 <div class=" card">
-                    <img src="./assets/images/programming-web-code-blue-screen-17122.svg" alt="sicon of programming code symbol"
-                        class="service_card_image">
+                    <img src="./assets/images/programming-web-code-blue-screen-17122.svg"
+                        alt="sicon of programming code symbol" class="service_card_image">
                     <h3 class="card_title">Software Development and Customization</h3>
                     <span class="card_text">TGet the software your business needs with our customized software
                         development services.</span>
@@ -152,7 +152,7 @@
         </section>
 
         <!-- get in touch banner -->
-        <section class="container section_spacing grid relative">
+        <section class="container section_spacing grid relative" id="contact">
 
             <h3 class="section_title">Get In Touch</h3>
             <p class="section_text">Don't let technology be a burden for your business. Take the first step towards a
