--- a/projects.html
+++ b/projects.html
@@ -21,7 +21,7 @@
                 <img src="./assets/images/logo.svg" alt="brand logo" class="brand_icon">
                 <div>
                     <span>ByteSized</span><br>
-                <span class='brand_solutions'>Solutions</span>
+                    <span class='brand_solutions'>Solutions</span>
                 </div>
             </a>
 
@@ -34,7 +34,7 @@
                 <li><a class="nav_item" href="./about.html">About</a></li>
                 <li><a class="nav_item" href="./services.html">Services</a></li>
                 <li><a aria-current="page" class="nav_item" href="./projects.html">Projects</a></li>
-                <li><a class="nav_item btn btn_pry" href="#contact">Get In Touch</a></li>
+                <li><a class="nav_item btn btn_pry" href="./about.html#contact">Get In Touch</a></li>
             </ul>
         </nav>
     </header>
@@ -52,7 +52,7 @@
             <p class="section_text">See how we have helped businesses like yours reach their goals with our IT
                 solutions. Our portfolio showcases a diverse range of industries, each with its own unique challenges
                 and requirements.</p>
-                
+
 
             <!-- projects cards -->
             <div class="case_carousel flex row">
@@ -68,7 +68,7 @@
                             growing business. With the increasing demand for their services, they required a reliable
                             and efficient IT solution that could meet their unique needs and support their growing
                             business.</span>
-                            <a href="./projects/inked-productions.html" class="btn btn_sec card_btn">Read more <i
+                        <a href="./projects/inked-productions.html" class="btn btn_sec card_btn">Read more <i
                                 class="fa fa-arrow-right"></i></a>
                     </section>
                 </div>
@@ -84,7 +84,7 @@
                             needed a reliable and efficient solution to keep up with their growing demands and ensure
                             their workflow remains smooth and seamless. With this in mind, they approached ByteSized
                             Solutions for help.</span>
-                            <a href="./projects/inked-productions.html" class="btn btn_sec card_btn">Read more <i
+                        <a href="./projects/inked-productions.html" class="btn btn_sec card_btn">Read more <i
                                 class="fa fa-arrow-right"></i></a>
                     </section>
                 </div>
@@ -100,7 +100,7 @@
                             robust and scalable application that would meet the needs of their growing business and
                             customer base. With the help of ByteSized Solutions, they were able to turn their vision
                             into a reality.</span>
-                            <a href="about.html#services" class="btn btn_sec card_btn">Read more <i
+                        <a href="about.html#services" class="btn btn_sec card_btn">Read more <i
                                 class="fa fa-arrow-right"></i></a>
                     </section>
                 </div>
@@ -123,7 +123,7 @@
                     <li><a class="nav_item" href="./about.html">About</a></li>
                     <li><a class="nav_item" href="./about.html/#services">Services</a></li>
                     <li><a class="nav_item" href="./projects.html">Projects</a></li>
-                    <li><a class="nav_item btn btn_pry cta" href="#contact">Get In Touch</a></li>
+                    <li><a class="nav_item btn btn_pry cta" href="./about.html#contact">Get In Touch</a></li>
                 </ul>
             </nav>
             <p>©2023 ByteSized Solutions. All rights reserved</p>
