--- a/projects/sound-beetle.html
+++ b/projects/sound-beetle.html
@@ -50,36 +50,31 @@
 
         </section>
         <section class="container about_services section_spacing grid services_articles">
-            <h2>Inked Productions</h2>
+            <h2>Sound Beetle</h2>
             <article class="services_article_block  grid">
                 <iframe src="https://www.youtube.com/embed/hB1NVzqn7PU" title="YouTube video player"
                     allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
                     allowfullscreen></iframe>
 
                 <h3>Case Study</h3>
-                <p>Inked Productions is a leading film production company, known for
-                    producing critically acclaimed and commercially successful films. The company faced a
-                    challenge in setting up a 3-room film edit suite with shared storage, to support their
-                    growing business. With the increasing demand for their services, they required a reliable
-                    and efficient IT solution that could meet their unique needs and support their growing
-                    business.</p>
+                <p>SoundBeetle is a cutting-edge music licensing company that is changing the way people access and
+                    license music for their projects. They needed to build a custom music licensing application that
+                    would allow users to search, preview, and license music tracks in a seamless and user-friendly way.
+                    SoundBeetle faced the challenge of developing a robust and scalable application that would meet the
+                    needs of their growing business and customer base. With the help of ByteSized Solutions, they were
+                    able to turn their vision into a reality.</p>
                 <h3>Challenge</h3>
-                <p>Inked Productions was in need of setting up a film edit suite with three rooms, all
-                    connected by a shared storage solution. They were in search of a reliable and efficient system to
-                    support their film production process.</p>
+                <p>SoundBeetle needed to build a music licensing application that would allow music producers and
+                    publishers to easily license music to content creators.</p>
                 <h3>Solution</h3>
-                <p>ByteSized Solutions implemented a cloud-based storage solution that would allow the
-                    team at Inked Productions to access their files and projects from any room. This solution made it
-                    possible for the team to work together seamlessly on large-scale projects without having to transfer
-                    files between rooms. The ByteSized Solutions team also set up a secure network that ensured the
-                    confidentiality of the clients' projects and data.</p>
+                <p> ByteSized Solutions provided SoundBeetle with a customized software development solution that met
+                    their unique needs and requirements. Our team of experts worked closely with SoundBeetle to
+                    understand their goals and build a solution that would meet their needs.</p>
                 <h3>Impact</h3>
-                <p>The implementation of the cloud-based storage solution and secure network had a
-                    significant impact on the productivity and workflow of Inked Productions. The team was able to
-                    complete
-                    projects faster and more efficiently, with less downtime. The clients were also pleased with the
-                    level
-                    of security and peace of mind that came with having their projects and data protected.
+                <p>The new music licensing application made it easier for music producers and publishers to license
+                    their music, resulting in an increase in revenue for SoundBeetle. The user-friendly interface and
+                    efficient process also improved the experience for content creators, resulting in increased
+                    satisfaction and repeat business.
                 </p>
             </article>
 
