--- a/services.html
+++ b/services.html
@@ -174,35 +174,35 @@
             <h2>Software Development and Customization</h2>
             <article class="services_article_block  grid">
                 <h3>The era of applications; a direct window to your customers</h3>
-                    <img class='card_image' src="./assets/images/software_services_vestor.jpg"
-                        alt="vector image of software developers discussing">
-                   
-                    <p class="credit">Image by fullvector on Freepik</p>
+                <img class='card_image' src="./assets/images/software_services_vestor.jpg"
+                    alt="vector image of software developers discussing">
 
-                    <p>Software development and customization can help businesses take advantage of the latest
+                <p class="credit">Image by fullvector on Freepik</p>
 
-                        technology to
-                        achieve their business goals. With these services, businesses can create custom software
-                        solutions
-                        that are tailored to their specific needs, increasing efficiency and reducing costs. Here are a
-                        few
-                        benefits of software development and customization:</p>
-                    <ul>
-                        <li>Tailored Solutions: Custom software solutions are designed to meet the specific needs of a
-                            business, ensuring that the technology is optimized for their workflows and processes. This
-                            can
-                            increase efficiency and reduce costs by eliminating the need for businesses to use multiple,
-                            disparate technologies.</li>
-                        <li>Flexibility: Custom software solutions are flexible and can be easily adapted as your
-                            business
-                            changes. This allows businesses to keep pace with changing technologies and ensure that
-                            their
-                            technology investments are aligned with their business goals.</li>
-                        <li>Expertise: Working with software development experts can help businesses take advantage of
-                            the
-                            latest technology and best practices, ensuring that their custom solutions are optimized for
-                            performance, scalability, and security.</li>
-                    </ul>
+                <p>Software development and customization can help businesses take advantage of the latest
+
+                    technology to
+                    achieve their business goals. With these services, businesses can create custom software
+                    solutions
+                    that are tailored to their specific needs, increasing efficiency and reducing costs. Here are a
+                    few
+                    benefits of software development and customization:</p>
+                <ul>
+                    <li>Tailored Solutions: Custom software solutions are designed to meet the specific needs of a
+                        business, ensuring that the technology is optimized for their workflows and processes. This
+                        can
+                        increase efficiency and reduce costs by eliminating the need for businesses to use multiple,
+                        disparate technologies.</li>
+                    <li>Flexibility: Custom software solutions are flexible and can be easily adapted as your
+                        business
+                        changes. This allows businesses to keep pace with changing technologies and ensure that
+                        their
+                        technology investments are aligned with their business goals.</li>
+                    <li>Expertise: Working with software development experts can help businesses take advantage of
+                        the
+                        latest technology and best practices, ensuring that their custom solutions are optimized for
+                        performance, scalability, and security.</li>
+                </ul>
             </article>
         </section>
         <hr class="container">
@@ -215,7 +215,7 @@
                     alt="vector image of people performing a software test">
                 <p class="credit">Image by pch.vector on Freepik</p>
 
-                
+
                 <p>Quality assurance and testing is a critical aspect of software development and technology management.
                     With these services, businesses can ensure that their technology solutions are reliable, efficient,
                     and secure. Here are a few benefits of quality assurance and testing:</p>
@@ -250,7 +250,7 @@
                     <li><a class="nav_item" href="./about.html">About</a></li>
                     <li><a class="nav_item" href="./about.html/#services">Services</a></li>
                     <li><a class="nav_item" href="./projects.html">Projects</a></li>
-                    <li><a class="nav_item btn btn_pry cta" href="#contact">Get In Touch</a></li>
+                    <li><a class="nav_item btn btn_pry cta" href="./about.html#contact">Get In Touch</a></li>
                 </ul>
             </nav>
             <p>©2023 ByteSized Solutions. All rights reserved</p>
