--- a/projects/ant-media.html
+++ b/projects/ant-media.html
@@ -57,29 +57,23 @@
                     allowfullscreen></iframe>
 
                 <h3>Case Study</h3>
-                <p>Inked Productions is a leading film production company, known for
-                    producing critically acclaimed and commercially successful films. The company faced a
-                    challenge in setting up a 3-room film edit suite with shared storage, to support their
-                    growing business. With the increasing demand for their services, they required a reliable
-                    and efficient IT solution that could meet their unique needs and support their growing
-                    business.</p>
+                <p>Ant Media is a rapidly growing company that provides a range of office networking solutions to
+                    businesses of all sizes. They faced the challenge of ensuring seamless communication and
+                    collaboration between their employees, in order to continue delivering outstanding results for their
+                    clients. Ant Media required a network solution that would be reliable, efficient, and secure,
+                    allowing them to stay ahead of the game in their industry.</p>
                 <h3>Challenge</h3>
-                <p>Inked Productions was in need of setting up a film edit suite with three rooms, all
-                    connected by a shared storage solution. They were in search of a reliable and efficient system to
-                    support their film production process.</p>
+                <p>Ant Media needed a reliable office networking solution to connect their employees and improve
+                    communication and collaboration.</p>
                 <h3>Solution</h3>
-                <p>ByteSized Solutions implemented a cloud-based storage solution that would allow the
-                    team at Inked Productions to access their files and projects from any room. This solution made it
-                    possible for the team to work together seamlessly on large-scale projects without having to transfer
-                    files between rooms. The ByteSized Solutions team also set up a secure network that ensured the
-                    confidentiality of the clients' projects and data.</p>
+                <p>ByteSized Solutions provided Ant Media with a comprehensive network design and implementation
+                    solution that optimized their existing infrastructure. This involved upgrading their hardware and
+                    software, as well as providing ongoing support and maintenance to ensure the network was running
+                    smoothly.</p>
                 <h3>Impact</h3>
-                <p>The implementation of the cloud-based storage solution and secure network had a
-                    significant impact on the productivity and workflow of Inked Productions. The team was able to
-                    complete
-                    projects faster and more efficiently, with less downtime. The clients were also pleased with the
-                    level
-                    of security and peace of mind that came with having their projects and data protected.
+                <p>The new network solution improved connectivity and communication between employees, resulting in more
+                    efficient collaboration and improved productivity. The reliable network also reduced downtime and
+                    increased security, giving Ant Media peace of mind.
                 </p>
             </article>
 
