--- a/projects/ant-media.html
+++ b/projects/ant-media.html
@@ -50,7 +50,7 @@
 
         </section>
         <section class="container about_services section_spacing grid services_articles">
-            <h2>Inked Productions</h2>
+            <h2>Ant Media</h2>
             <article class="services_article_block  grid">
                 <iframe src="https://www.youtube.com/embed/hB1NVzqn7PU" title="YouTube video player"
                     allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
