final commit. fixeed broken link on case study on home page

--- a/index.html
+++ b/index.html
@@ -206,7 +206,7 @@
                             growing business. With the increasing demand for their services, they required a reliable
                             and efficient IT solution that could meet their unique needs and support their growing
                             business.</span>
-                        <a href="./about.html#services" class="btn btn_sec card_btn">Read more <i
+                        <a href="./projects/inked-productions.html" class="btn btn_sec card_btn">Read more <i
                                 class="fa fa-arrow-right"></i></a>
                     </section>
                 </div>
@@ -222,7 +222,7 @@
                             needed a reliable and efficient solution to keep up with their growing demands and ensure
                             their workflow remains smooth and seamless. With this in mind, they approached ByteSized
                             Solutions for help.</span>
-                        <a href="./about.html#services" class="btn btn_sec card_btn">Read more <i
+                        <a href="./projects/ant-media.html" class="btn btn_sec card_btn">Read more <i
                                 class="fa fa-arrow-right"></i></a>
                     </section>
                 </div>
@@ -238,7 +238,7 @@
                             robust and scalable application that would meet the needs of their growing business and
                             customer base. With the help of ByteSized Solutions, they were able to turn their vision
                             into a reality.</span>
-                        <a href="./about.html#services" class="btn btn_sec card_btn">Read more <i
+                        <a href="./projects/sound-beetle.html" class="btn btn_sec card_btn">Read more <i
                                 class="fa fa-arrow-right"></i></a>
                     </section>
                 </div>
