fixed broken footer links

--- a/projects/sound-beetle.html
+++ b/projects/sound-beetle.html
@@ -92,9 +92,9 @@
                     <li class="footer_nav_items_title">Navigation</li>
                     <li><a class="nav_item" href="../index.html">Home</a></li>
                     <li><a class="nav_item" href="../about.html">About</a></li>
-                    <li><a class="nav_item" href="../about.html/#services">Services</a></li>
+                    <li><a class="nav_item" href="../services.html">Services</a></li>
                     <li><a class="nav_item" href="../projects.html">Projects</a></li>
-                    <li><a class="nav_item btn btn_pry cta" href="#contact">Get In Touch</a></li>
+                    <li><a class="nav_item btn btn_pry cta" href="../about.html#contact">Get In Touch</a></li>
                 </ul>
             </nav>
             <p>©2023 ByteSized Solutions. All rights reserved</p>
